--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.3.5",
+    "ssl-express-www": "^3.0.7",
     "validator": "^13.5.1"
   }
 }
